YAML/btc-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btc-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btc-service-deployment
  template:
    metadata:
      labels:
        app: btc-service-deployment
    spec:
      containers:
        - name: btc-service-container
          image: navehacr.azurecr.io/btc-express:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /service-a/healthz 
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /service-a/readiness
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    app: btc-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
