YAML/btc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    app: btc-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
