YAML/busybox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  type: ClusterIP
  selector:
    app: busybox-deployment
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
