YAML/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-ing
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /service-a
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 8080
          - path: /service-b
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 8081
